tests/errors/test_err_lex_limits.f90
program lex_limits
  integer :: this_is_a_very_long_variable_name_that_exceeds_the_sixty_three_character_limit = 1
  print *, "Forgot to close this quote
end program lex_limits
